# customChatBot

./: pyproject.toml
app/: actions.py  chat.py  entities.json  formatting.py  functions.py  intents.json  main.py  parser.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatWindow.tsx  DocEditor.tsx
